[gd_scene load_steps=16 format=3 uid="uid://cpeh5n4ulqfj8"]

[ext_resource type="Script" path="res://src/vehicles/suzuki_street_bike.gd" id="1_kaywd"]
[ext_resource type="PackedScene" uid="uid://3genr5akjgoh" path="res://Models/suzuki_motorbike.blend" id="2_oulto"]
[ext_resource type="Material" uid="uid://caix441d5osw7" path="res://Materials/suzuki_motorbike/Carbon Black.tres" id="3_fnu7f"]
[ext_resource type="Material" uid="uid://b42hb4b8518d3" path="res://Materials/suzuki_motorbike/Gold 10K B3D Material.tres" id="4_whgbf"]
[ext_resource type="Material" uid="uid://dj711xafgply4" path="res://Materials/suzuki_motorbike/Material.024.tres" id="5_cgvlx"]
[ext_resource type="Material" uid="uid://cbn7h3mndtysj" path="res://Materials/suzuki_motorbike/Material.021.tres" id="6_svxa6"]
[ext_resource type="Material" uid="uid://d1ajm8qliayjp" path="res://Materials/suzuki_motorbike/Material.017.tres" id="7_w5qt1"]
[ext_resource type="Script" path="res://src/vehicles/Camera3DMotorbike.gd" id="8_vtxyw"]
[ext_resource type="Script" path="res://src/vehicles/SpotLight3DMotorbike.gd" id="9_py0su"]
[ext_resource type="PackedScene" uid="uid://dk8lgq07lf21s" path="res://Models/suzuki_motorbike_wheel_front.blend" id="10_6b6o3"]
[ext_resource type="PackedScene" uid="uid://d187rujkq4dfw" path="res://Models/suzuki_motorbike_steering.blend" id="11_3pe4u"]
[ext_resource type="PackedScene" uid="uid://kyeqe5nebe68" path="res://Models/suzuki_motorbike_wheel_rear.blend" id="11_ui01t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kcw31"]
radius = 0.346736
height = 1.24328

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2ni4f"]
radius = 0.352626
height = 2.41795

[sub_resource type="BoxShape3D" id="BoxShape3D_ecjq4"]
size = Vector3(2.61341, 1.20412, 1.06614)

[node name="Motorbike" type="VehicleBody3D"]
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 300.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.6, 0)
can_sleep = false
script = ExtResource("1_kaywd")

[node name="suzuki_motorbike" parent="." instance=ExtResource("2_oulto")]
transform = Transform3D(-6.55671e-08, 0, -1.5, 0, 1.5, 0, 1.5, 0, -6.55671e-08, -0.102091, 0, -0.913)

[node name="right" parent="suzuki_motorbike" index="0"]
surface_material_override/0 = ExtResource("3_fnu7f")
surface_material_override/1 = ExtResource("4_whgbf")
surface_material_override/5 = ExtResource("5_cgvlx")
surface_material_override/9 = ExtResource("6_svxa6")
surface_material_override/10 = ExtResource("7_w5qt1")

[node name="CollisionShape3DHead" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00321764, 1.07123, 7.33137e-05)
visible = false
shape = SubResource("CapsuleShape3D_kcw31")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0.0061298, 0.966013, 0)
shape = SubResource("CapsuleShape3D_2ni4f")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, -0.00323421, 0.51126, 0)
shape = SubResource("CapsuleShape3D_2ni4f")

[node name="Camera3DSuzuki" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00318015, 1.53614, 0)
script = ExtResource("8_vtxyw")

[node name="SpotLight3DSuzukiFront" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.956305, 0.292372, 0, -0.292372, 0.956305, -0.0234728, 1.01026, -0.92679)
visible = false
light_energy = 100.0
shadow_enabled = true
spot_range = 100.0
spot_angle = 35.0
spot_angle_attenuation = 4.0
script = ExtResource("9_py0su")

[node name="OmniLight3DSuzukiFront" type="OmniLight3D" parent="SpotLight3DSuzukiFront"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-07, 0, -1.49012e-07, 1, -0.00414276, -0.0153804, 0.00975454)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 16.0
shadow_enabled = true
omni_range = 0.0710282
omni_attenuation = 0.933032

[node name="SpotLight3DSuzukiRear" type="SpotLight3D" parent="SpotLight3DSuzukiFront"]
transform = Transform3D(1, 0, 0, 0, -0.954538, 0.298091, 0, -0.298091, -0.954538, 0.0206127, -0.53396, 1.96355)
light_color = Color(1, 0, 0, 1)
light_energy = 3.076
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0

[node name="Area3PlayerEnter" type="Area3D" parent="."]

[node name="CollisionShape3DPlayerEnter" type="CollisionShape3D" parent="Area3PlayerEnter"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.00423431, 0.731949, 0)
shape = SubResource("BoxShape3D_ecjq4")

[node name="Area3DCrash" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586655, 0)

[node name="CollisionPolygon3DCrash" type="CollisionPolygon3D" parent="Area3DCrash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.13644, 0.0114981)
depth = 2.2
polygon = PackedVector2Array(-0.0222536, 0.614661, -0.460205, 0.514834, -0.276502, -0.538079, 0.272724, -0.538079, 0.438239, 0.521274)

[node name="VehicleWheel3DFront" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0106844, 0.426289, -0.870414)
use_as_steering = true
wheel_radius = 0.37
suspension_stiffness = 80.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleWheel3DFront"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0353661, 0.00089848, 0.00127876)
visible = false
radius = 0.35157
height = 1.88687
sides = 64

[node name="suzuki_motorbike_wheel_front" parent="VehicleWheel3DFront" instance=ExtResource("10_6b6o3")]
transform = Transform3D(-6.55671e-08, 0, 1.5, 0, 1.5, 0, -1.5, 0, -6.55671e-08, -0.000174283, -0.363053, -0.00298738)

[node name="VehicleWheel3DRear" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0164611, 0.463317, 0.817406)
use_as_traction = true
wheel_radius = 0.37
suspension_stiffness = 80.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="suzuki_motorbike_wheel_rear" parent="VehicleWheel3DRear" instance=ExtResource("11_ui01t")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.362516, 0)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705231, 0)

[node name="CSGCylinder3Daiaaa" type="CSGCylinder3D" parent="Node3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0484695, 0, -2.73975)
height = 0.125611
sides = 64

[node name="CSGBox3D" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0321121, 0.0462341, -2.21082)
size = Vector3(1, 0.164876, 0.252648)

[node name="suzuki_motorbike_steering" parent="." instance=ExtResource("11_3pe4u")]
unique_name_in_owner = true
transform = Transform3D(1.5, 0, 0, 0, 1.38118, -0.585109, 0, 0.585109, 1.38118, -0.00925636, 0.0376132, -0.992588)

[connection signal="body_entered" from="Area3PlayerEnter" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3PlayerEnter" to="." method="_on_area_3d_body_exited"]
[connection signal="body_shape_entered" from="Area3DCrash" to="." method="_on_area_3d_crash_body_shape_entered"]

[editable path="suzuki_motorbike"]
